# feature-engineering-agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
output/graph/: graph_latest.mmd
src/agent/: __init__.py  graph.py  nodes.py  state.py
src/llm/: gigachat_client.py
src/utils/: baseline.py  scoring.py
